# dev-agent-playbook

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  TEMPLATE.md
.cursor/rules/: mcp-project-cwd.mdc
.github/workflows/: ci.yml
apache-camel/: AGENTS.md  INDEX.md  README.md  agents.md  anti-patterns.md  architecture.md  error-conventions.md  glossary.md
apache-camel/architecture/: overview.md
apache-camel/core/: definition-of-done.md  glossary.md  guardrails.md
apache-camel/gates/: README.md
docs/: INDEX.md
mcp/: auth.py  cache.py  config.toml  corpus.py  dev.py  identity.py  index_render.py  loader.py  metrics.py  pyproject.toml  quality.py  quality_rules.py  requirement_rules.py  search.py  server.py  session.py
mcp/dashboard/: auth_routes.py  routes.py
mcp/dashboard/static/: nav.js  palette.js  style.css
mcp/dashboard/templates/: _macros.html  activity.html  base.html  dashboard.html  guide.html  login.html  project_detail.html  projects.html  requirement_detail.html  requirements.html  searches.html  setup.html  tokens.html  tools.html  user_detail.html  users.html  users_admin.html
mcp/templates/: PRD.md  STORY.md
mcp/tests/: conftest.py  test_auth.py  test_auth_routes.py  test_dashboard.py  test_identity.py  test_loader.py  test_metrics.py  test_project_resolve.py  test_quality.py  test_search.py  test_server_tools.py  test_session.py
mcp/tools/: __init__.py  docs.py  projects.py  requirements.py  search_tool.py  start_task.py
nexre/: AGENTS.md  INDEX.md  README.md
scripts/: validate-rules.py
(+95 files in other folders)
