[project]
name = "dev-agent-playbook"
version = "0.3.0"
description = "MCP server for team rule docs — read-only, BM25 search, usage dashboard"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.1",
    "rank-bm25>=0.2.2",
    "uvicorn>=0.30",
    "starlette>=0.37",
    "sse-starlette>=2.0",
    "jinja2>=3.1",
]

[project.scripts]
dev-agent-playbook = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = [
    "ruff>=0.4.0",
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".venv", "__pycache__", ".ruff_cache"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
# E501: long lines are sometimes necessary in error messages and tool descriptions.
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
